option('gtk_doc', type: 'boolean', value: false, description: 'Enable Gtk-Doc generation')
option('introspection', type: 'feature', value: 'auto', description: 'Build Introspection data')
option('gibber', type: 'feature', value: 'enabled', description: 'Build gibber transport library')
option('plugins', type: 'feature', value: 'enabled', description: 'disable plugin loader')
option('google-relay', type: 'boolean', value: 'false', description: 'enable Google Jingle relay support')
option('file-transfer', type: 'feature', value: 'enabled', description: 'disable file transfer support')
option('voip', type: 'feature', value: 'enabled', description: 'disable VoIP (and, consequently, Jingle-based file transfer) support')
option('fatal-criticals', type: 'feature', value: 'enabled', description: 'disable (mask) fatal abort on g_critical')
option('code-style-check', type: 'boolean', description: 'enable coding style checks')
option('ca-certificates', type: 'string', description: 'path to system Certificate Authority list')
option('install-tests', type: 'boolean', value: false, description: 'install test units')
option('is-a-phone', type: 'boolean', value: false, description: 'advertise that we are a phone, not a PC')
