if ENABLE_PLUGIN_API
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = telepathy-gabble.pc

gabbleincludedir = $(includedir)/telepathy-gabble-0/gabble
gabbleinclude_HEADERS = \
    capabilities-set.h \
    caps-hash.h \
    connection.h \
    error.h \
    gabble.h \
    namespaces.h \
    plugin.h \
    sidecar.h \
    types.h

endif
